2004-02-28  Zwane Mwaikambo  <zwane@linuxpower.ca>

	* libutil++/op_bfd.cpp:
	* utils/opcontrol: This patch fixes the listing of symbols within the
	  kernel image on ARM i was having. The problem was due to the fact
	  that ARM/Linux kernel text starts with a section called .init unlike
	  all the currently supported Linux architectures. So the solution is
	  to start at section 0

2004-02-28  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/op_syscalls.c: warning fix

2004-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/Makefile.am:
	* daemon/liblegacy/Makefile.am: force daemon build with frame pointer.
	  If daemon is built w/o frame pointer we get random arc, some of them
	  go in the vma used by an existing mmaped sample file, so cookie
	  lookup return a sample filename which is used as a from or to
	  component, this break pptools by creating invalid filename.  Note
	  this doesn't protect agaisnt a make CFLAGS=-fomit-frame-pointer.

	* libpp/callgraph_container.cpp: use the right {cg_}image_name for
	  verbose output.

2004-02-21  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_flags.h:
	* libpp/format_output.cpp:
	* libpp/format_output.h:
	* pp/opstack.cpp: alternate output format.

2004-02-20  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/srcdoc/Doxyfile.in: Fix for doxygen 1.3.6
	* libpp/profile_spec.h:
	* libutil++/op_bfd.h: minor Doxygen comments fix

2004-02-20  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests/string_manip_tests.cpp: fix a $ make check failure
	  from the last format_percent() change

2004-02-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_output.cpp: change output spacing.

2004-02-17  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opstack_options.h:
	* pp/opstack.cpp: pass mege_options::lib to callgraph_container
	* libpp/callgraph_container.cpp:
	* libpp/callgraph_container.h: handle merge_options::lib

2004-02-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_output.cpp: use "self/child" for header